--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,7 @@ h6 {
 }
 .footer i {
     color: #e5e7eb;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.5), 0 2px 4px -2px rgba(0, 0, 0, 0.5);
 }
 .footer .links {
     display: flex;
